--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-title: WisTex United Docs
+title: WisTex United
 description: A starter template for WisTex United Docs
 theme: just-the-docs
 
 url: https://github.com/wistex-united/wistex-united.github.io
-aux_links:
-  Source Code: https://github.com/wistex-united/wistex-united.github.io
+# aux_links:
+#   Source Code: https://github.com/wistex-united/wistex-united.github.io
 
 nav_external_links:
-  - title: BHuman Public Wiki
-    url: https://docs.b-human.de/
-    opens_in_new_tab: true
+  # - title: BHuman Public Wiki
+  #   url: https://docs.b-human.de/
+  #   opens_in_new_tab: true
 
   - title: WisTex on GitHub
     url: https://github.com/wistex-united
@@ -37,5 +37,5 @@ callouts:
     color: red
     opacity: 0.15
 
-logo: /assets/images/WisTex-United-Logo-250x250.png
-favicon_ico: /assets/images/WisTex-United-Logo-220x220.png
+# logo: /assets/images/WisTex-United-Logo-250x250.png
+# favicon_ico: /assets/images/WisTex-United-Logo-220x220.png
