--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,10 @@ url: https://github.com/wistex-united/wistex-united.github.io
 nav_external_links:
   - title: WisTex on GitHub
     url: https://github.com/wistex-united
+  - title: BadgerBots Jira
+    url: https://robocup-wisc.atlassian.net/jira/software/projects/KAN/boards/2
+    
+    https://robocup-wisc.atlassian.net/jira/software/projects/KAN/boards/2
 
 color_scheme: wis-tex
 
